src/components/Cropper.css
.wrapper {
  position: relative;
  overflow: hidden;

  /* prevent user from selecting component like text */
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-touch-callout: none;
  -o-user-select: none;
  -moz-user-select: none;
}

.hole {
  content: '';
  pointer-events: none;
  position: absolute;
  border: 2px solid white;
  border-radius: 50%;
  box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.6);
  z-index: 1;
}

.actions {
  position: absolute;
  right: 1px;
  top: 50%;
  transform: translateY(-50%);
  z-index: 2;
}

.rotationController,
.zoomController {
  border-radius: 5px;
  overflow: hidden;
  margin: 5px 0;
}

.controllerButton {
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 5px;
  background-color: white;
  border: 0;
  font-size: 0.8rem;
  text-align: center;
  transition: background-color ease-in-out 200ms;
}

.controllerButton:disabled {
  cursor: not-allowed;
  opacity: 0.8;
}

.controllerButton:focus {
  outline: none;
  box-shadow: inset 0 0 3px grey;
}

.plus:hover,
.minus:hover {
  background-color: #D1D1D1;
}

